gccida/c2/regrename_optimize
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:704:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:714:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v50; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:718:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v54; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:719:1: error: must use 'enum' tag to refer to type 'scan_actions'
scan_actions v55; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:720:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v56; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:746:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *v82; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:822:6: error: use of undeclared identifier 'v158'
rtx *v158; // r13 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:826:6: error: use of undeclared identifier 'v162'
rtx *v162; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:828:6: error: use of undeclared identifier 'v164'
rtx *v164; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:836:6: error: use of undeclared identifier 'v172'
rtx *v172; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:847:6: error: use of undeclared identifier 'loc'
rtx *loc; // [rsp+48h] [rbp-210h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:873:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x705060); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:874:41: error: use of undeclared identifier 'xmm'
v3 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x705010); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:875:41: error: use of undeclared identifier 'xmm'
v4 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641420); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:876:41: error: use of undeclared identifier 'xmm'
v5 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x705050); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:877:6: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v6 = ( __m128i)-1LL; 
     ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:878:41: error: use of undeclared identifier 'xmm'
v7 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x705040); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:879:41: error: use of undeclared identifier 'xmm'
v8 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x705000); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/regrename.c:880:41: error: use of undeclared identifier 'xmm'
v9 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x704FF0); 
                                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regrename_optimize/src/obj/regrename.o] Error 1
